# Numerical_Analysis

./: .gitignore  CMakeLists.txt  Li.cpp  LinearAlgebra.hpp  LinearAlgebra_class.hpp  Newton.cpp  READEME.md  README.md  a.out  eigen.cpp  gigen_test.cpp  kadai1.cpp  kadai1.py  main-20190410.cpp  main.cpp  main2.cpp  matplotlibcpp.h  test.cpp
20190418/: 20190418.cpp  20190418_kadai.cpp  eps.cpp  kadai1.cpp  kadai11.cpp  kadai111.cpp  main-20190410.cpp
20190425/: 20190425_kadai.cpp  Newton.h  a.out
20190509/: Newton1.py  Secant.py  a.out  hoge.cpp  kadai20190509_1.cpp  kadai20190509_1_2.cpp  kadai20190509_2.cpp  kadai20190509_2_2.cpp  kadai20190509_kadai.cpp  kadai20190509_kadai_2.cpp  practice01.cpp  practice04.cpp  test2.cpp
20190516/: Gauss_elimination.cpp  LinearAlgebra.cpp  LinearAlgebra.hpp  gaus.cpp
20190530/: Gauss_elimination.cpp  LinearAlgebra.hpp  a.out
20190606/: LinearAlgebra.hpp  a.out  kadai.dvi  kadai.tex  kadai.txt  main.cpp  main2.cpp  test.txt  test1.cpp  test3.cpp  txt.txt
20190613/: LinearAlgebra.hpp  a.out  kadai.txt  main_.cpp
20190620/: LinearAlgebra.hpp  a.out  main.cpp  test.txt
DL/: LinearAlgebra.cpp  LinearAlgebra.hpp  a.out  main.cpp
Report/: Euler_report.aux  Euler_report.tex  Numerical_Analysis_report.tex  euler.py  lotka_volterra.py  van_der_pol.py
Report_winter/: Report_winter.aux  Report_winter.tex
exe/: Gauss_elimination.cpp  Gauss_pivot_kadai.cpp  Hilbelt.cpp  Jacobi_law.cpp  LU.cpp  Logistic.cpp  equations_newton_1.cpp  equations_newton_2.cpp  kakko5.cpp  kappa.cpp  main.cpp  main2.cpp  main3.cpp  report.cpp  report_winter_1.cpp  report_winter_2.cpp  test.cpp  test1.cpp
mogitest/: Gauss_elimination.cpp  LinearAlgebra.hpp  Newton.cpp  a.out  kappa.cpp  main.cpp
newfile/: LinearAlgebra.hpp  Newton.cpp  graph.py  main.cpp  practice03.cpp
pdf/: Euler-ex.py  Logistic-map.nb  a.out  main.cpp
python/: Beatles_Logistic_Heun.py  Beatles_Logistic_Heun_.py  Euler.py  Hematopoietic_Adjustment_Heun.py  Logistic.py  Logistic_Heun.py  Logistic_delay.py  Logistic_kadai9.nb  Logistic_kadai9.py  TPBVP.py  TPBVP_2.py  blank_test.py  diffusion_equation.py  diffusion_equation_2.py  euler_method.py  exp-d.py  marix.py  module.py  mogi.py  none.py  read_csv.py  slider.py  test.py  zouketu.py
src/: Algo.cpp  Algo.hpp  Gauss_elimination.cpp  LU.cpp  LinearAlgebra.cpp  Newton.cpp  (+9 more)
(+9 files in other folders)
